vendor/vnc/Cloud.h


/** Listener used to join VNC Cloud and listen for a connection. */
typedef struct vnc_CloudListener vnc_CloudListener;

/** Connector used to join VNC Cloud and establish an outgoing connection. */
typedef struct vnc_CloudConnector vnc_CloudConnector;

/** Monitor used to query the availability of VNC Cloud addresses. */
typedef struct vnc_CloudAddressMonitor vnc_CloudAddressMonitor;


/**
 * Destroys the Cloud listener.  Any ongoing connections are not affected, but
 * new connections will not be accepted.
 *
 * @param listener The listener.
 */
VNC_SDK_API void
vnc_CloudListener_destroy(vnc_CloudListener* listener);


/**
 * Creates a connector, which is used used to create connections to Cloud
 * addresses.
 *
 * @param localCloudAddress The cloud address representing our end for outgoing
 *     connections (typically a string with four components of the form
 *     <tt>XXX.XXX.XXX.XXX</tt>).
 * @param localCloudPassword The password associated with @p localCloudAddress
 *     (typically a short alphanumeric string).
 *
 * @return Returns a new @ref vnc_CloudConnector on success, or NULL on error.
 *     If an error is returned, vnc_getLastError() can be used to get the error
 *     code.
 *
 * @retval InvalidArgument
 *     The given Cloud address or password is malformed
 * @retval AddressError
 *     The given Cloud address is not valid or is already in use
 */
VNC_SDK_API vnc_CloudConnector*
vnc_CloudConnector_create(const char* localCloudAddress,
                          const char* localCloudPassword);


/**
 * Destroys the Cloud connector.
 *
 * @param connector The connector.
 */
VNC_SDK_API void
vnc_CloudConnector_destroy(vnc_CloudConnector* connector);


/**
 * Begins an outgoing connection to the given Cloud address.  The connection
 * will be handled by the @p connectionHandler.
 *
 * The Cloud connector can be used to create connections to any number of
 * different peer addresses, without having to wait for earlier connections to
 * finish (note however that a viewer cannot be used as a connection handler if
 * it is already connected).  Two simultaneous connections to the same peer
 * Cloud address are not supported.  The connector can be destroyed immediately
 * after creating a connection, without affecting the connection: the connection
 * handler immediately takes ownership of it.
 *
 * Connection errors are notified using the server or viewer's callbacks
 * (depending on the type of the connection handler).
 *
 * @param connector The connector.
 * @param peerCloudAddress The cloud address to make a connection to.
 * @param connectionHandler The object which shall handle the outgoing
 *     connection.  It is either a server or a viewer.  Connection errors are
 *     notified via the connection handler's callbacks.
 *
 * @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()
 *     to get the error code.
 *
 * @retval InvalidArgument
 *     The given Cloud address or password is malformed
 * @retval UnexpectedCall
 *     The connection handler is already connected
 */
VNC_SDK_API vnc_status_t
vnc_CloudConnector_connect(vnc_CloudConnector* connector,
                           const char* peerCloudAddress,
                           vnc_ConnectionHandler* connectionHandler);


/**
 * Sets whether new connections created by the connector wait for the peer to
 * start listening.  The default behaviour is for connections to fail if the
 * peer is not currently listening.
 *
 * @param connector The connector.
 * @param waitForPeer If set to #vnc_true, then the connection attempt will
 *     wait for the peer to create a Cloud listener.  The application must
 *     decide how long to wait, and cancel the connection attempt after a
 *     suitable timeout by destroying the viewer.
 */
VNC_SDK_API void
vnc_CloudConnector_setWaitForPeer(vnc_CloudConnector* connector,
                                  vnc_bool_t waitForPeer);


/**
 * Set the bandwidth limit applied to relayed Cloud connections.
 *
 * Connections made via VNC Cloud are either @em direct or @em relayed.  A
 * direct connection will be made where possible, but if one of the peers is
 * behind a restrictive NAT or firewall, then VNC Cloud will be used to relay
 * the data.  In this case, a bandwidth limit may be set to control use of the
 * relay.
 *
 * After calling vnc_CloudConnector_create(), the connector's initial bandwidth
 * limit is unlimited.  If a new limit is set on the connector, it will be
 * applied to all subsequent connections started using
 * vnc_CloudConnector_connect().
 *
 * @param relayBandwidthLimit The limit in bytes per second, or -1 for
 *     unlimited.  The allowed values are in the range 1024 to 999999999.
 *
 * @return @c vnc_success is returned on success or @c vnc_failure in the case
 *     of an error, in which case vnc_getLastError() can be used to get the
 *     error code.
 *
 * @retval InvalidArgument
 *     The bandwidth limit is out of range
 */
VNC_SDK_API vnc_status_t
vnc_CloudConnector_setRelayBandwidthLimit(vnc_CloudConnector* connector,
                                          int relayBandwidthLimit);


/** Enumeration of availabilities for a Cloud address. */
typedef enum {
  /** A peer is currently listening on the Cloud address. */
  vnc_CloudAddressMonitor_Available,
  /** No peer is currently listening on the Cloud address. */
  vnc_CloudAddressMonitor_Unavailable,
  /** The Cloud address monitor is waiting for the Cloud services to return the
   *  availability for the peer address, or an error occurred. */
  vnc_CloudAddressMonitor_UnknownAvailability,
} vnc_CloudAddressMonitor_Availability;



/**
 * Callback for a @ref vnc_CloudAddressMonitor.
 *
 * @see vnc_CloudAddressMonitor_create()
 */
typedef struct {
  /**
   * Notification that the availability information for a Cloud address has
   * changed.  This callback is required.
   *
   * @param cloudAddress The address whose availability has changed.
   * @param availability The new value for the availability.
   */
  void
  (*availabilityChanged)(void* userData,
                         vnc_CloudAddressMonitor* monitor,
                         const char* cloudAddress,
                         vnc_CloudAddressMonitor_Availability availability);

  /**
   * Notification that monitoring has been paused by an outgoing connection
   * starting.  This callback is optional.
   *
   * The monitor should not normally need to be restarted -- in particular, if
   * availability information is not being displayed to the user the monitor
   * should not be resumed.
   */
  void
  (*monitorPaused)(void* userData,
                   vnc_CloudAddressMonitor* monitor);
} vnc_CloudAddressMonitor_Callback;


/**
 * Creates a monitor, which queries whether a list of cloud addresses is
 * available.  (An address is "available" if there is a Cloud listener currently
 * accepting connections on that address.)  The monitor will notify its
 * callback whenever the availability information for an address is updated.
 *
 * Each Cloud connector can have at most one associated monitor at one time.
 *
 * @param connector The connector used by the monitor for queries to VNC Cloud.
 * @param cloudAddresses An array of cloud addresses to be monitored.
 * @param nAddresses The length of the @p cloudAddresses array.
 * @param callback The required callback for receiving availability information.
 *
 * @return Returns a new @ref vnc_CloudAddressMonitor on success, or NULL on
 *     error.  If an error is returned, vnc_getLastError() can be used to get
 *     the error code.
 *
 * @retval UnexpectedCall
 *     The given Cloud connector already has a monitor
 * @retval InvalidArgument
 *     One of the given Cloud addresses is malformed
 */
VNC_SDK_API vnc_CloudAddressMonitor*
vnc_CloudAddressMonitor_create(
    vnc_CloudConnector* connector,
    _In_reads_(nAddresses) const char** cloudAddresses,
    int nAddresses,
    const vnc_CloudAddressMonitor_Callback* callback,
    void* userData);


/**
 * Destroys the Cloud monitor.
 *
 * @param monitor The monitor.
 */
VNC_SDK_API void
vnc_CloudAddressMonitor_destroy(vnc_CloudAddressMonitor* monitor);


/**
 * Pauses the Cloud monitor.  While paused, updates will not be fetched for
 * the peer addresses, however, the callback may still be notified of changes in
 * availability for a short while after pausing.  If a list of cloud addresses
 * is being shown with their availabilities, it would be appropriate to pause
 * the monitor while the window is not focused, for example.
 *
 * @param monitor The monitor.
 */
VNC_SDK_API void
vnc_CloudAddressMonitor_pause(vnc_CloudAddressMonitor* monitor);


/**
 * Resumes the Cloud monitor.
 *
 * @param monitor The monitor.
 */
VNC_SDK_API void
vnc_CloudAddressMonitor_resume(vnc_CloudAddressMonitor* monitor);


/**
 * Sets whether or not the Cloud monitor pauses automatically when a connection
 * is established.  Normally, a Cloud monitor does not need to run during a
 * connection, so the default behaviour is to reduce bandwidth by pausing the
 * monitor when a connection is established.  If @p pauseOnConnect is set to
 * #vnc_false, the user must be careful to pause the monitor when possible,
 * rather than continuously polling the network.
 *
 * @param monitor The monitor.
 * @param pauseOnConnect Whether to pause when a new incoming connection is
 *     established.
 */
VNC_SDK_API void
vnc_CloudAddressMonitor_setPauseOnConnect(vnc_CloudAddressMonitor* monitor,
                                          vnc_bool_t pauseOnConnect);


/**
 * Specifies proxy server settings for Cloud connections; note these settings
 * are adopted for all subsequent outgoing Cloud connections.  By default, the
 * SDK employs the system configured proxy settings when making Cloud
 * connections. You can specify a particular proxy server, or supply full user
 * credentials. Note that any connection error arising from the proxy settings
 * is reported when an outgoing connection is attempted; see
 * @ref vnc_CloudConnector_connect.
 *
 * @param systemProxy Set this to #vnc_true to employ the currently
 *     configured system proxy settings. When set to #vnc_false, @p proxyUrl is
 *     used to specify the proxy settings.
 * @param proxyUrl A string specifying a proxy server, plus user credentials
 *     if required. The format of the string is
 *     ``type://username:password@address::port``, where ``type`` is either
 *     ``socks`` or ``http``, for example
 *     ``socks://fred:X$fr£4Pw@mySocks5Proxy.here.com::8888``. Note that if
 *     @p systemProxy is #vnc_false and @p proxyUrl is null or empty then this
 *     is treated as a request to stop using a proxy server.
 *
 * @return #vnc_success or #vnc_failure, in which case call
 *     vnc_getLastError() to get the error code.
 *
 * @retval InvalidArgument
 *     @p proxyUrl does not conform to the required format (see above).
 *
 * @since 1.4
 */
VNC_SDK_API vnc_status_t
vnc_setCloudProxySettings(vnc_bool_t systemProxy,
                          _In_opt_z_ const char* proxyUrl);