src/cloud.rs


    #[doc = " Destroys the Cloud listener.  Any ongoing connections are not affected, but"]
    #[doc = " new connections will not be accepted."]
    #[doc = ""]
    #[doc = " @param listener The listener."]
    pub fn vnc_CloudListener_destroy(listener: *mut vnc_CloudListener);
    #[doc = " Creates a connector, which is used used to create connections to Cloud"]
    #[doc = " addresses."]
    #[doc = ""]
    #[doc = " @param localCloudAddress The cloud address representing our end for outgoing"]
    #[doc = "     connections (typically a string with four components of the form"]
    #[doc = "     <tt>XXX.XXX.XXX.XXX</tt>)."]
    #[doc = " @param localCloudPassword The password associated with @p localCloudAddress"]
    #[doc = "     (typically a short alphanumeric string)."]
    #[doc = ""]
    #[doc = " @return Returns a new @ref vnc_CloudConnector on success, or NULL on error."]
    #[doc = "     If an error is returned, vnc_getLastError() can be used to get the error"]
    #[doc = "     code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The given Cloud address or password is malformed"]
    #[doc = " @retval AddressError"]
    #[doc = "     The given Cloud address is not valid or is already in use"]
    pub fn vnc_CloudConnector_create(
        localCloudAddress: *const ::std::os::raw::c_char,
        localCloudPassword: *const ::std::os::raw::c_char,
    ) -> *mut vnc_CloudConnector;
    #[doc = " Destroys the Cloud connector."]
    #[doc = ""]
    #[doc = " @param connector The connector."]
    pub fn vnc_CloudConnector_destroy(connector: *mut vnc_CloudConnector);
    #[doc = " Begins an outgoing connection to the given Cloud address.  The connection"]
    #[doc = " will be handled by the @p connectionHandler."]
    #[doc = ""]
    #[doc = " The Cloud connector can be used to create connections to any number of"]
    #[doc = " different peer addresses, without having to wait for earlier connections to"]
    #[doc = " finish (note however that a viewer cannot be used as a connection handler if"]
    #[doc = " it is already connected).  Two simultaneous connections to the same peer"]
    #[doc = " Cloud address are not supported.  The connector can be destroyed immediately"]
    #[doc = " after creating a connection, without affecting the connection: the connection"]
    #[doc = " handler immediately takes ownership of it."]
    #[doc = ""]
    #[doc = " Connection errors are notified using the server or viewer's callbacks"]
    #[doc = " (depending on the type of the connection handler)."]
    #[doc = ""]
    #[doc = " @param connector The connector."]
    #[doc = " @param peerCloudAddress The cloud address to make a connection to."]
    #[doc = " @param connectionHandler The object which shall handle the outgoing"]
    #[doc = "     connection.  It is either a server or a viewer.  Connection errors are"]
    #[doc = "     notified via the connection handler's callbacks."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call vnc_getLastError()"]
    #[doc = "     to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The given Cloud address or password is malformed"]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     The connection handler is already connected"]
    pub fn vnc_CloudConnector_connect(
        connector: *mut vnc_CloudConnector,
        peerCloudAddress: *const ::std::os::raw::c_char,
        connectionHandler: *mut vnc_ConnectionHandler,
    ) -> vnc_status_t;
    #[doc = " Sets whether new connections created by the connector wait for the peer to"]
    #[doc = " start listening.  The default behaviour is for connections to fail if the"]
    #[doc = " peer is not currently listening."]
    #[doc = ""]
    #[doc = " @param connector The connector."]
    #[doc = " @param waitForPeer If set to #vnc_true, then the connection attempt will"]
    #[doc = "     wait for the peer to create a Cloud listener.  The application must"]
    #[doc = "     decide how long to wait, and cancel the connection attempt after a"]
    #[doc = "     suitable timeout by destroying the viewer."]
    pub fn vnc_CloudConnector_setWaitForPeer(
        connector: *mut vnc_CloudConnector,
        waitForPeer: vnc_bool_t,
    );

    #[doc = " Set the bandwidth limit applied to relayed Cloud connections."]
    #[doc = ""]
    #[doc = " Connections made via VNC Cloud are either @em direct or @em relayed.  A"]
    #[doc = " direct connection will be made where possible, but if one of the peers is"]
    #[doc = " behind a restrictive NAT or firewall, then VNC Cloud will be used to relay"]
    #[doc = " the data.  In this case, a bandwidth limit may be set to control use of the"]
    #[doc = " relay."]
    #[doc = ""]
    #[doc = " After calling vnc_CloudConnector_create(), the connector's initial bandwidth"]
    #[doc = " limit is unlimited.  If a new limit is set on the connector, it will be"]
    #[doc = " applied to all subsequent connections started using"]
    #[doc = " vnc_CloudConnector_connect()."]
    #[doc = ""]
    #[doc = " @param relayBandwidthLimit The limit in bytes per second, or -1 for"]
    #[doc = "     unlimited.  The allowed values are in the range 1024 to 999999999."]
    #[doc = ""]
    #[doc = " @return @c vnc_success is returned on success or @c vnc_failure in the case"]
    #[doc = "     of an error, in which case vnc_getLastError() can be used to get the"]
    #[doc = "     error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     The bandwidth limit is out of range"]
    pub fn vnc_CloudConnector_setRelayBandwidthLimit(
        connector: *mut vnc_CloudConnector,
        relayBandwidthLimit: ::std::os::raw::c_int,
    ) -> vnc_status_t;

    #[doc = " Creates a monitor, which queries whether a list of cloud addresses is"]
    #[doc = " available.  (An address is \"available\" if there is a Cloud listener currently"]
    #[doc = " accepting connections on that address.)  The monitor will notify its"]
    #[doc = " callback whenever the availability information for an address is updated."]
    #[doc = ""]
    #[doc = " Each Cloud connector can have at most one associated monitor at one time."]
    #[doc = ""]
    #[doc = " @param connector The connector used by the monitor for queries to VNC Cloud."]
    #[doc = " @param cloudAddresses An array of cloud addresses to be monitored."]
    #[doc = " @param nAddresses The length of the @p cloudAddresses array."]
    #[doc = " @param callback The required callback for receiving availability information."]
    #[doc = ""]
    #[doc = " @return Returns a new @ref vnc_CloudAddressMonitor on success, or NULL on"]
    #[doc = "     error.  If an error is returned, vnc_getLastError() can be used to get"]
    #[doc = "     the error code."]
    #[doc = ""]
    #[doc = " @retval UnexpectedCall"]
    #[doc = "     The given Cloud connector already has a monitor"]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     One of the given Cloud addresses is malformed"]
    pub fn vnc_CloudAddressMonitor_create(
        connector: *mut vnc_CloudConnector,
        cloudAddresses: *mut *const ::std::os::raw::c_char,
        nAddresses: ::std::os::raw::c_int,
        callback: *const vnc_CloudAddressMonitor_Callback,
        userData: *mut ::std::os::raw::c_void,
    ) -> *mut vnc_CloudAddressMonitor;

    #[doc = " Destroys the Cloud monitor."]
    #[doc = ""]
    #[doc = " @param monitor The monitor."]
    pub fn vnc_CloudAddressMonitor_destroy(monitor: *mut vnc_CloudAddressMonitor);
    #[doc = " Pauses the Cloud monitor.  While paused, updates will not be fetched for"]
    #[doc = " the peer addresses, however, the callback may still be notified of changes in"]
    #[doc = " availability for a short while after pausing.  If a list of cloud addresses"]
    #[doc = " is being shown with their availabilities, it would be appropriate to pause"]
    #[doc = " the monitor while the window is not focused, for example."]
    #[doc = ""]
    #[doc = " @param monitor The monitor."]
    pub fn vnc_CloudAddressMonitor_pause(monitor: *mut vnc_CloudAddressMonitor);

    #[doc = " Resumes the Cloud monitor."]
    #[doc = ""]
    #[doc = " @param monitor The monitor."]
    pub fn vnc_CloudAddressMonitor_resume(monitor: *mut vnc_CloudAddressMonitor);

    #[doc = " Sets whether or not the Cloud monitor pauses automatically when a connection"]
    #[doc = " is established.  Normally, a Cloud monitor does not need to run during a"]
    #[doc = " connection, so the default behaviour is to reduce bandwidth by pausing the"]
    #[doc = " monitor when a connection is established.  If @p pauseOnConnect is set to"]
    #[doc = " #vnc_false, the user must be careful to pause the monitor when possible,"]
    #[doc = " rather than continuously polling the network."]
    #[doc = ""]
    #[doc = " @param monitor The monitor."]
    #[doc = " @param pauseOnConnect Whether to pause when a new incoming connection is"]
    #[doc = "     established."]
    pub fn vnc_CloudAddressMonitor_setPauseOnConnect(
        monitor: *mut vnc_CloudAddressMonitor,
        pauseOnConnect: vnc_bool_t,
    );

    #[doc = " Specifies proxy server settings for Cloud connections; note these settings"]
    #[doc = " are adopted for all subsequent outgoing Cloud connections.  By default, the"]
    #[doc = " SDK employs the system configured proxy settings when making Cloud"]
    #[doc = " connections. You can specify a particular proxy server, or supply full user"]
    #[doc = " credentials. Note that any connection error arising from the proxy settings"]
    #[doc = " is reported when an outgoing connection is attempted; see"]
    #[doc = " @ref vnc_CloudConnector_connect."]
    #[doc = ""]
    #[doc = " @param systemProxy Set this to #vnc_true to employ the currently"]
    #[doc = "     configured system proxy settings. When set to #vnc_false, @p proxyUrl is"]
    #[doc = "     used to specify the proxy settings."]
    #[doc = " @param proxyUrl A string specifying a proxy server, plus user credentials"]
    #[doc = "     if required. The format of the string is"]
    #[doc = "     ``type://username:password@address::port``, where ``type`` is either"]
    #[doc = "     ``socks`` or ``http``, for example"]
    #[doc = "     ``socks://fred:X$fr£4Pw@mySocks5Proxy.here.com::8888``. Note that if"]
    #[doc = "     @p systemProxy is #vnc_false and @p proxyUrl is null or empty then this"]
    #[doc = "     is treated as a request to stop using a proxy server."]
    #[doc = ""]
    #[doc = " @return #vnc_success or #vnc_failure, in which case call"]
    #[doc = "     vnc_getLastError() to get the error code."]
    #[doc = ""]
    #[doc = " @retval InvalidArgument"]
    #[doc = "     @p proxyUrl does not conform to the required format (see above)."]
    #[doc = ""]
    #[doc = " @since 1.4"]
    pub fn vnc_setCloudProxySettings(
        systemProxy: vnc_bool_t,
        proxyUrl: *const ::std::os::raw::c_char,
    ) -> vnc_status_t;
}
